2017-01-25 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Code cleanup

2017-01-24 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Follow-up to Resolves ##79423: Migrate upload fields (image) to FAL
	* Resolves #79449: Allow special characters in username in default configuration
	* Update version to 5.0.0
	* Resolves #76292: mm-relation: foreing uid is saved in uid_local and vice versa
	* Resolves #79454: Use mb_strtoupper in Marker.php
	* Resolves #79456: Remove deprecated code from TransmissionSecurity.php

2017-01-23 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Follow-up to Resolves ##79423: Migrate upload fields (image) to FAL

2017-01-22 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves ##79423: Migrate upload fields (image) to FAL

2017-01-20 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #77525: Avatar can not be deleted

2017-01-19 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #79047: Change of usergroup not possible

2017-01-18 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #79381: Migrate to Doctrine
	* Resolves #79380: Fix double translation of radio button labels
	* Follow-up to Resolves #79381: Migrate to Doctrine
	* Resolves #79186: Evaluation uniqueGlobal reacts to own email address in edit mode
	* Further follow-up to Resolves #79381: Migrate to Doctrine

2017-01-15 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Require TYPO3 CMS 7.6

2017-01-12 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #76190: static calls for HtmlUtility methods
	* Resolves #76524: No text replacement for missing gender
	* Resolves #77218: Site name will not be accepted
	* Resolves #77227: plugin.tx_srfeuserregister_pi1.email.HTMLMail has no effect
	* Resolves #78725: Field address should be placed into parseValues
	* Update version to 4.0.3

2016-04-12 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #75512: Follow-up to Auto-login on create throws fatal error

2016-04-11 Stanislas Rolland  <typo3(arobas)sjbr.ca>