@@ -1,5 +1,6 @@
 2017-01-25 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Code cleanup
+	* Follow-up to Resolves #76292: mm-relation: foreing uid is saved in uid_local and vice versa
 
 2017-01-24 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Follow-up to Resolves ##79423: Migrate upload fields (image) to FAL
